@@ -76,6 +76,8 @@ void print_usage()
 		"            than bytes will be piece-aligned\n"
 		"-s bytes    specifies a piece size for the torrent\n"
 		"            This has to be a multiple of 16 kiB\n"
+		"-l          Don't follow symlinks, instead encode them as\n"
+		"            links in the torrent file\n"
 		"-o file     specifies the output filename of the torrent file\n"
 		"            If this is not specified, the torrent file is\n"
 		"            printed to the standard out, except on windows\n"
@@ -147,6 +149,9 @@ int main(int argc, char* argv[])
 					++i;
 					outfile = argv[i];
 					break;
+				case 'l':
+					flags |= create_torrent::symlinks;
+					break;
 				default:
 					print_usage();
 					return 1;
@@ -157,7 +162,7 @@ int main(int argc, char* argv[])
 		file_pool fp;
 		path full_path = complete(path(argv[1]));
 
-		add_files(fs, full_path, file_filter);
+		add_files(fs, full_path, file_filter, flags);
 		if (fs.num_files() == 0)
 		{
 			fputs("no files specified.\n", stderr);
